# colorrs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
patterns/: alpha.toml  arch.toml  doom-outlined.toml  test.toml
src/: download.rs  files.rs  main.rs  patterns.rs
