[package]
name = "colorrs"
version = "0.3.0"
edition = "2024"
description = "A Rust CLI for outputting terminal colour test images"
authors = ["Emma Alexandria <emma.jellemabutler@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5.47", features = ["cargo"] }
dirs = "6.0.0"
enable-ansi-support = "0.2.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
wild = "2.2.1"
