
[package]
license = "MIT"
name = "colorrs"
version = "1.0.2"
edition = "2024"
description = "A Rust CLI for outputting terminal colour test images"
authors = ["Emma Alexandria <emma.jellemabutler@gmail.com>"]
repository = "https://www.github.com/emmalexandria/colorrs"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5.47", features = ["cargo"] }
clap_complete = "4.5.57"
enable-ansi-support = "0.2.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.21.0"
toml = "0.9.5"
wild = "2.2.1"
